Updates to conclusion

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -5,10 +5,10 @@ In this paper we answer four common questions regarding Blockchain technology: (
 We accomplish this goal by analyzing a large corpus of data produced by industry using grounded theory.
 This method was successfully able to help us separate the though leadership provided by industry in this space from the hype that it also peddles.
 
-Our results identity three key components to Blockchain technology: shared governance and operation, an append-only ledger, and replication.
-Using these and other technical primitives and principles, Blockchain technology is able to provide a range of Capabilities: auditability, full-system provenance, access control for assets, resilience to accidents and malicious entities, and smart contracts.
+Our results identify three key components to Blockchain technology: shared governance and operation, an append-only ledger, and data replication.
+Using these and other technical primitives and principles, Blockchain technology is able to provide a range of capabilities: auditability, full-system provenance, access control for assets, resilience to accidents and malicious entities, and smart contracts.
 We also showed how Blockchain technology relates to other distributed databases, demonstrating that it has more features than alternative systems, but is also more complex then those systems.
 For that reason, we only recommend its use when the application has the following needs: shared governance, provenance, auditability and resilience provided by Blockchain technology.
 
 Finally, we identified relevant applications for Blockchain technology as well as open research questions in this area.
-As Blockchain technology has significant potential, we hope this list of applications and research questions will inspire more researchers and practitioners to explore this area.
+As Blockchain technology has significant potential, we hope this list of applications and research questions will direct researchers and practitioners in productive ways.
