Updates to the challenges section.

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1041,20 +1041,6 @@
 	Title = {Fast Secure Multiparty {ECDSA} with Practical Distributed Key Generation and Applications to Cryptocurrency Custody},
 	Year = {2018}}
 
-@article{arxiv:ECBS18,
-	Archiveprefix = {arXiv},
-	Author = {Shayan Eskandari and Jeremy Clark and David Barrera and Elizabeth Stobert},
-	Bibsource = {dblp computer science bibliography, https://dblp.org},
-	Biburl = {https://dblp.org/rec/bib/journals/corr/abs-1802-04351},
-	Eprint = {1802.04351},
-	Journal = {CoRR},
-	Timestamp = {Mon, 13 Aug 2018 16:49:02 +0200},
-	Title = {A first look at the usability of bitcoin key management},
-	Url = {http://arxiv.org/abs/1802.04351},
-	Volume = {abs/1802.04351},
-	Year = {2018},
-	Bdsk-Url-1 = {http://arxiv.org/abs/1802.04351}}
-
 @inproceedings{PKC:Boldyreva03,
 	Address = pkc03addr,
 	Author = {Alexandra Boldyreva},
@@ -1222,4 +1208,22 @@
 	Pages = {399--414},
 	Title = {Bitter to better---how to make bitcoin a better currency},
 	Year = {2012}
+}
+
+@article{DBLP:journals/corr/abs-1708-04748,
+	author    = {Steven Goldfeder and
+	Harry A. Kalodner and
+	Dillon Reisman and
+	Arvind Narayanan},
+	title     = {When the cookie meets the blockchain: Privacy risks of web payments
+	via cryptocurrencies},
+	journal   = {CoRR},
+	volume    = {abs/1708.04748},
+	year      = {2017},
+	url       = {http://arxiv.org/abs/1708.04748},
+	archivePrefix = {arXiv},
+	eprint    = {1708.04748},
+	timestamp = {Mon, 13 Aug 2018 16:48:40 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1708-04748},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
