--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,9 +1,12 @@
 % !TEX root = ../main.tex
 
 \section{Conclusion}
-In this paper we answer four common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, (3) how does it compare to other approaches (e.g., distributed databases), (4) what are good applications for Blockchain technology.
+In this paper we answer three common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.
 We accomplish this goal by analyzing a large corpus of data produced by industry using grounded theory.
 This method was successfully able to help us separate the though leadership provided by industry in this space from the hype that it also peddles.
+
+% TODO: We need a new conclusion
+
 
 Our results identify three key components to Blockchain technology: shared governance and operation, an append-only ledger, and data replication.
 Using these and other technical primitives and principles, Blockchain technology is able to provide a range of capabilities: auditability, full-system provenance, access control for assets, resilience to accidents and malicious entities, and smart contracts.
