--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -5,13 +5,9 @@ In this paper we answer three common questions regarding Blockchain technology: 
 We accomplish this goal by analyzing a large corpus of data produced by industry using grounded theory.
 This method was successfully able to help us separate the though leadership provided by industry in this space from the hype that it also peddles.
 
-% TODO: We need a new conclusion
+Our results demonstrate that Blockchain technology is not just hype, but that is provides several important properties and can be used in many interesting applications and use cases.
+With these technical properties also comes significant overhead: shared governance and operation (i.e., consensus), as well as  a fully replicated, auditable ledger.
+As such, Blockchain technology is best suited for situations in which these properties are required and helpful for the given application.
 
-
-Our results identify three key components to Blockchain technology: shared governance and operation, an append-only ledger, and data replication.
-Using these and other technical primitives and principles, Blockchain technology is able to provide a range of capabilities: auditability, full-system provenance, access control for assets, resilience to accidents and malicious entities, and smart contracts.
-We also showed how Blockchain technology relates to other distributed databases, demonstrating that it has more features than alternative systems, but is also more complex then those systems.
-For that reason, we only recommend its use when the application has the following needs: shared governance, provenance, auditability and resilience provided by Blockchain technology.
-
-Finally, we identified relevant applications for Blockchain technology as well as open research questions in this area.
-As Blockchain technology has significant potential, we hope this list of applications and research questions will direct researchers and practitioners in productive ways.
+In short, Blockchain technology will be a useful tool to the security community going forward.
+Even though it does not solve all the problems that its proponents claim it does, it is deserving of further research and application by security researchers.
