--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -62,7 +62,7 @@ The systems auditability is used to ensure that all organizations are sharing da
 \paragraph{Insurance}
 In this use case, an off-chain oracle is used to report on accidents and other insured events.
 As these reports are recorded, the system can automatically begin the claim process and even pay out the insurance money upon completion of the claim.
-Blockchain technology's auditability provides confidence to customers that their claims were handle appropriately.
+Blockchain technology's auditability provides confidence to customers that their claims were handled appropriately.
 Additionally, having insurers collectively govern and operate this system could ensure that claims are properly settled when they involve multiple insurers.
 
 \paragraph{Regulation/sanctions}
@@ -87,7 +87,7 @@ Finally, the resilience of Blockchain technology is important in prevent cyber-a
 \paragraph{Identity and key management}
 Identities along with cryptographic attestations about properties for those identities (e.g., over 18 years of age, has a driver's license) can be written to the Blockchain.
 These identities and attestations can then be used by other systems to support their access control policies.
-Importantly, this identity information comes with full provenance. This could be useful in determine suspicious activity (e.g., having an age that is not increasing linearly).
+Importantly, this identity information comes with full provenance. This could be useful in determining suspicious activity (e.g., having an age that is not increasing linearly).
 This could also be a quicker and more performant way of establishing identity than the current certificate authority system.
 
 \paragraph{Gambling}
@@ -102,9 +102,10 @@ Additionally, the replication inherent to Blockchain technology means that even 
 \paragraph{Interoperation}
 Blockchain technology can facilitate the interoperation of multiples systems.
 It can provide a place for multiple systems to write their data and make requests of other systems.
-Using smart contracts it can convert those requests to the appropriate form to allow them to be parsed by other systems.\
-This is a poor use case because it does not rely on shared governance, consensus, or provenance.
-This use case can more easily be accomplished with a standard program and a database.
+Using smart contracts it can convert those requests to the appropriate form to allow them to be parsed by other systems.
+If a central database server is not suitable for the application, this use case may be valid, but in most cases this can more easily be accomplished with a standard program and a database.
+%This is a poor use case because it does not rely on shared governance, consensus, or provenance.
+
 
 \paragraph{Timetamping}
 Blockchain technology could be used to timestamp documents. Still, timestamping generally does not rely on any of Blockchain technologies key properties, and so Blockchain technology is likely overkill for this application.
