--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -8,8 +8,8 @@ Later, Chaum et al.~\cite{chaum1988untraceable} expanded this idea into a fully 
 eCash was the first cryptocurrency---i.e., ``a digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds operating independently of a [nation-state-controlled] central bank.''\footnote{\url{https://en.oxforddictionaries.com/definition/cryptocurrency}}
 However, early cryptocurrencies still required the presence of a central party to help manage the creation and transfer of funds.
 
-Two decades after eCash was first proposed, an author using the pseudonym Satoshi Nakamoto~\cite{Nak08} wrote a white paper describing Bitcoin, a new decentralized cryptocurrency.
-Unlike centralized cryptocurrencies which rely on a set of known entities to operate the cryptocurrency, Bitcoin uses a proof-of-work-based scheme~\cite{DN93,back1997partial} to allow the general public to maintain the system.
+Two decades after eCash was first proposed, an author using the pseudonym Satoshi Nakamoto wrote a white paper describing Bitcoin, a new decentralized cryptocurrency~\cite{Nak08}.
+Unlike centralized cryptocurrencies which rely on a set of known entities to operate, Bitcoin uses a proof-of-work-based scheme~\cite{DN93,back1997partial} to allow the general public to maintain the system.
 To incentivize public participation, Bitcoin pays participants (known as miners) for solving the proof-of-work puzzles.
 While Bitcoin's building blocks were not novel, the composition of these properties into a single system was a meaningful contribution~\cite{Narayanan17} which led the cryptocurrency to become the first to achieve widespread popularity and usage.
 
@@ -27,20 +27,19 @@ This allowed us to extract valuable technical insights out from the hype and tec
 Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions commonly asked in relation to Blockchain technology.
 
 While many of the results in this work might not be surprising to some readers, our experience suggests that knowledge of Blockchain technology is neither universal nor complete within the security community.
-Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work and are intended to serve as an aid for researchers as they field questions related to Blockchain and as they explore whether Blockchain technology is relevant to their personal research areas.%the academic literature
- More concretely, our key contributions are:
+Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work and are intended to serve as an aid for researchers as they field questions related to Blockchain and as they explore whether Blockchain technology is relevant to their personal research areas. More concretely, our key contributions are:
 
 \begin{enumerate}
 	\item \textbf{Defining the key technical properties of Blockchain technology.}
-	Based on the results of our analysis, we identify three key properties for Blockchain technology: shared governance and operation, an append-only ledger, and replication.
-	Blockchain systems are governed and operated by a distributed collection of entities that individually and collectively ensure that all operations are valid.
+	Based on the results of our analysis, we identify three key properties for Blockchain technology: shared governance and operation, the use of an append-only ledger, and replication of data.
+	Blockchain systems are governed and operated by a distributed and decentralized collective of entities that ensure that all operations are valid.
 	These operations are recorded in an append-only ledger that provides full-system provenance.
-	This ledger is also replicated by all governing parties, providing resilience against data loss and malicious modification of data.
+	This ledger is also replicated by a set of governing parties, providing resilience against data loss and malicious modification of data.
 	We also discuss associated technical properties that Blockchain makes use of.
 	
 	\item \textbf{Identifying the capabilities provided by Blockchain technology.}
 	Our results demonstrate that Blockchain provides several important capabilities for use in building  systems.
-	First, Blockchain systems inherently track their full-system provenance, and this provenance data allows for the system to be easily audited by miners and outside parties.
+	First, Blockchain systems inherently track their full-system provenance, and this provenance data allows for the system to be audited by miners and potentially by outside parties.
 	This provenance data is also useful in tracking assets monitored or managed by the Blockchain system (e.g., supply chain management, cryptocurrencies).
 	Second, Blockchain technology provides access control for the assets it monitors or manages and can allow operations on these assets to be pseudonymous.
 	Third, the provenance information and replication of that information among all miners provides significant resilience against accidental data loss or malicious modification of the data.
@@ -48,7 +47,7 @@ Taken together, the results in this paper represent the most complete overview o
 	
 	\item \textbf{Identifying groups of applications (i.e., use cases) that are most likely to benefit from Blockchain technology.}
 	Within the literature we analyzed there was a range of potential applications for Blockchain technology.
-	We group these applications into a set of use cases and then separate those use case based on the likelihood that individual applications within the use case would benefit from the use of Blockchain technology.
+	We group these applications into a set of use cases and then discuss the likelihood that individual applications within the use case would benefit from the use of Blockchain technology.
 	Example use cases include cryptocurrencies, asset management, and multi-organization data sharing.
 	
 	%TODO: These need to be updated when I work through these sections and the discussion.
