--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -80,7 +80,7 @@ These codes were generated using a mixture of open coding (assigning a code that
 To ensure that we were assigning the correct codes, we paid careful attention to the context of each statement.
 
 In particular, reviewers made sure to code the following four concepts found in documents:
-\begin{itemize}[label=$\blacksquare$]
+\begin{itemize}
 	\item \emph{Properties.} What are the building blocks for Blockchain technology? What capabilities does it provide?
 	\item \emph{Challenges.} What challenges must be addressed when building systems using Blockchain technology?
 	\item \emph{Limitations.} What inherent limitations are there when using Blockchain technology?
