reording a sentence and a subsection in discussion.

--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -149,7 +149,7 @@ In both of these situations, our research notes kept track of what was explicitl
 \subsubsection{Stage 4---Theory Generation}
 In the fourth and final stage, we used the concepts, categories, and connections derived from the first three stages of our grounded theory, along with our research notes and researcher expertises to derive several theories (i.e., research results from our analysis) regarding Blockchain technology.
 First, we subdivided the technical properties into three categories that give a high-level description of what Blockchain technology is (see Section~\ref{sec:blockchain}).
-Second, we extracted Blockchain technology's capabilities (Section~\ref{sec:capabilities}), use cases (Section~\ref{sec:use-cases}), and related challenges (Section~\ref{sec:challenges}).
+Second, we extracted Blockchain technology's capabilities (Section~\ref{sec:capabilities}), related challenges (Section~\ref{sec:challenges}), and use cases (Section~\ref{sec:use-cases}).
 Third, we found that there is a clean split between Blokchain technology's technological primitives and its normative properties (i.e., hype) (see Section~\ref{sec:normative}).
 %Third, we described how Blockchain technology differs from other distributed technologies (see Appendix~\ref{sec:distributed-comparison}) and identified criteria that help determine whether a given problem can benefit from the use of Blockchain technology (see Section~\ref{sec:should-i-use-it}).
 
