--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,8 +1,8 @@
 % !TEX root = ../main.tex
 
 \begin{abstract}
-Bitcoin's success has led to significant interest in its technical underpinnings known as Blockchain technology.
-Still, there is a lack of understanding regarding what exactly Blockchain technology and whether it is all hype, both within academia and industry.
+Bitcoin's success has led to significant interest in its underlying novel technical contribution: Blockchain technology.
+Nearly 10 years after Bitcoin's initial release, certain lack of clarity still persists, both within academia and industry, over Blockchain's capabilities, its relationship to related technologies, and which of its proposed use-cases are tenable and which are hype.
 In this paper we answer three common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.
 We accomplish this goal by using grounded theory to analyze a large corpus of data produced by industry.
 This method was successfully able to help us separate the though leadership provided by industry in this space from the hype that it also peddles.
