--- a/paper/main.tex
+++ b/paper/main.tex
@@ -7,8 +7,8 @@
 \input{setup/packages}
 \input{setup/macros}
 
-\usepackage{draftwatermark}
-\SetWatermarkColor[gray]{0.9}
+%\usepackage{draftwatermark}
+%\SetWatermarkColor[gray]{0.9}
 
 %====================================================================
 
