--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -2,10 +2,13 @@
 
 \section{Introduction}
 %\rnote{I think that we need to start with the notion of an authenticated data structure or hash chain used to establish the integrity of data, given the title of the paper.  What is the right reference?}
+% Jeremy: The right reference is Haber and Stornetta's work on linked timestamping
+% Jeremy: An alternative meta-citation would be Narayanan17 which traces the history
+% Jeremy: I will eventually fix the first paragraph: Chaum's e-cash doesn't meet the standard definition provided, in particular it is a digital representation of cash issued by a central bank and is not independent of it any way... it just allows electronic payments
 
-In 1982, David Chaum~\cite{Cha82} proposed using blind signatures to allow for untraceable payments.
-Later, Chaum et al.~\cite{chaum1988untraceable} expanded this idea into a fully fleshed out system, eCash.
-eCash was the first cryptocurrency---i.e., ``a digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds operating independently of a [nation-state-controlled] central bank.''\footnote{\url{https://en.oxforddictionaries.com/definition/cryptocurrency}}
+In 1982, David Chaum~\cite{Cha82} proposed using blind signatures to allow for untraceable electronic payments.
+Later, Chaum, Fiat and Naor~\cite{chaum1988untraceable} expanded this idea into a fully fleshed out electronic cash system.
+eCash was the first cryptocurrency---\ie ``a digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds operating independently of a [nation-state-controlled] central bank.''\footnote{\url{https://en.oxforddictionaries.com/definition/cryptocurrency}}
 However, early cryptocurrencies still required the presence of a central party to help manage the creation and transfer of funds.
 
 Two decades after eCash was first proposed, an author using the pseudonym Satoshi Nakamoto wrote a white paper describing Bitcoin, a new decentralized cryptocurrency~\cite{Nak08}.
@@ -24,10 +27,10 @@ Unfortunately, much of this work is fueled by hype and lacks the peer-review pro
 
 To address these limitations in our analysis of literature produced by industry we applied a grounded theory methodology~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method).
 This allowed us to extract valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
-Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions commonly asked in relation to Blockchain technology.
+Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions commonly asked in relation to Blockchain technology, as well as shedding light on industry's understandings and misunderstandings of the technology. 
 
 While many of the results in this work might not be surprising to some readers, our experience suggests that knowledge of Blockchain technology is neither universal nor complete within the security community.
-Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work and are intended to serve as an aid for researchers as they field questions related to Blockchain and as they explore whether Blockchain technology is relevant to their personal research areas. More concretely, our key contributions are:
+Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work that we are aware of, and are intended to serve as an aid for researchers as they field questions related to Blockchain and as they explore whether Blockchain technology is relevant to their personal research areas. More concretely, our key contributions are:
 
 \begin{enumerate}
 	\item \textbf{Defining the key technical properties of Blockchain technology.}
