Updated the abstract and conclusion, trying to highlight contributions in the current state of the paper, and fixing several typos.

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -2,12 +2,11 @@
 
 \begin{abstract}
 Bitcoin's success has led to significant interest in its underlying novel technical contribution: Blockchain technology.
-Nearly 10 years after Bitcoin's initial release, certain lack of clarity still persists, both within academia and industry, over Blockchain's capabilities, its relationship to related technologies, and which of its proposed use-cases are tenable and which are hype.
+Nearly 10 years after Bitcoin's initial release, a lack of clarity still persists within academia and industry over Blockchain's capabilities, its relationship to competing technologies, and which of its proposed use-cases are tenable and which are hype.
 In this paper we answer three common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.
-We accomplish this goal by using grounded theory to analyze a large corpus of data produced by industry.
-This method was successfully able to help us separate the though leadership provided by industry in this space from the hype that it also peddles.
-Additionally, we identify open research questions related to Blockchain technology and discuss lessons learned from our analysis of this space.
-The audience for this paper is broad, seeking to help the majority of researchers come to better understand this popular topic.
+We accomplish this goal by using grounded theory-a structured approach to gathering and analysis of data more commonly used in other sciences-to analyze a large corpus of industry data.
+This method enable us to answer the above questions while limiting researcher bias, to separate industry thought leadership from peddled hype, and helped us identify open research questions related to Blockchain technology.  We also discuss lessons learned from our analysis of this space using this approach.
+The audience for this paper is broad, seeking to help the majority of researchers come to better understanding of this popular topic.
 \end{abstract}
 
 \begin{IEEEkeywords}
