--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -3,11 +3,12 @@
 \section{Conclusion}
 In this paper we answer three common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.
 We accomplish this goal by analyzing a large corpus of data produced by industry using grounded theory.
-This method was successfully able to help us separate the though leadership provided by industry in this space from the hype that it also peddles.
+This method was successfully able to help us separate Blockchain thought leadership provided by industry's best from the hype peddled by industry's worst.
 
-Our results demonstrate that Blockchain technology is not just hype, but that is provides several important properties and can be used in many interesting applications and use cases.
-With these technical properties also comes significant overhead: shared governance and operation (i.e., consensus), as well as  a fully replicated, auditable ledger.
-As such, Blockchain technology is best suited for situations in which these properties are required and helpful for the given application.
+Our results show that Blockchain technology provides several important properties that can be used in many interesting applications and use cases.  These include provenance, auditability, and access control and pseudonymity.
+With these technical properties also comes significant overhead: shared governance and operation (i.e., consensus), as well as a fully replicated, auditable ledger.
+As such, Blockchain technology is best suited for situations in which these properties are required and helpful for the given application or where the overhead can be minimized.
 
-In short, Blockchain technology will be a useful tool to the security community going forward.
-Even though it does not solve all the problems that its proponents claim it does, it is deserving of further research and application by security researchers.
+In short, we anticipate that Blockchain technology will be a tool used by industry going forward, supporting interesting and important research for both academic and industry security community members.
+
+Even though it does not solve all the problems that its proponents claim it does, it is deserving of further research and application.
