Removed the giant bullets

--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -110,7 +110,8 @@ In the third stage, two researchers transfered all of the concepts related to te
 They then drew connecting lines between these concepts, describing how they related to one another.
 Based on these interconnections, concepts were divided into five different categories:
 
-\begin{itemize}[label=$\blacksquare$]
+%\begin{itemize}[label=$\blacksquare$]
+\begin{itemize}
 	\item \emph{Technical properties (Figures~\ref{fig:technical-properties},~\ref{fig:technical-properties-full}).}
 	Technical properties are the components that make up of Blockchain technology. Examples include decentralized governance, a consensus protocol, and an append-only transaction ledger.
 	
